environments/imperial-clustermesh/k8s/deathstar-consumer-httproute.yaml
apiVersion: gateway.networking.k8s.io/v1beta1
kind: HTTPRoute
metadata:
  name: lrequest-router
  namespace: deathstar
spec:
  # Consumer Route
  # parentRef service is differ namespace as HTTPRoute
  # Impacts only workloads from HTTPRoute's namespace 
  #   impacts only routes to lrequest-v1 in infra ns 
  #   from services in deathstar ns 
  parentRefs:
  # Here we are referencing a service insted of a gateway
  # The service-mesh implementation will parse  
    - name: lrequest-v1
      kind: Service
      namespace: infra  
      group: core
      port: 80
  rules:
    - matches:
      - headers:
        - name: "x-request-id"
          value: "alternative"
      backendRefs:
        - name: "lrequest-v2"
          port: 80
    - matches:
      - headers:
        - name: "x-request-id"
          value: "weighted"
      backendRefs:
        - name: "lrequest-v2"
          port: 80
          weight: 50  
        - name: "lrequest-v1"
          port: 80
          weight: 50  
    - backendRefs:
      - name: "lrequest-v1"
        port: 80
